# backend

./: .env.template  Dockerfile  Makefile  __main__.py  alembic.ini  docker-compose.yml  method_for_post.py  pyproject.toml  requirements.txt  setup.cfg  vacancy_endpoint.py
backend/: __main__.py  companies_model.py  companies_sqlstorage.py  companies_storage.py  company_model.py  config.py  db.py  errors.py  job_model.py  jobs_sqlstorage.py  jobs_storage.py  model.py  sql_storage.py
backend/database/: __main__.py  models.py
backend/schemas/: company.py  job.py
backend/storages/: companies.py  jobs.py
backend/views/: companies.py  jobs.py
migrations/: env.py
migrations/versions/: 2105092b328b_column_date_added_added_to_jobs.py  215c2dd1cc69_added_city_name_to_jobs.py  6fdd7b573369_column_city_added_to_jobs.py  ac91ecdd3317_create_db.py
