[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Irina Safenkova <saf-iri@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.37"
pydantic = "^1.9.1"
orjson = "^3.7.5"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
wemake-python-styleguide = "^0.16.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
